--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "class-transformer": "^0.4.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "multer": "^1.4.2",
+    "nodemailer": "^6.5.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.31"
@@ -21,6 +23,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
     "@types/multer": "^1.4.5",
+    "@types/nodemailer": "^6.4.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
   }
